# FastAI

./: CLAUDE.md  Dockerfile.mcp  MCP_SERVER_README.md  README.md  UV_MIRRORS_GUIDE.md  WSL_DEPLOYMENT.md  WSL_DEPLOYMENT_CHECKLIST.md  claude_desktop_config_example.json  docker-compose.mcp.yml  mcp_server.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  setup_mcp.py  start_mcp_server.bat  start_mcp_server.ps1  start_mcp_server.py  verify_wsl_compatibility.py
backend/: requirements.txt
backend/app/: config.py  database.py  main.py  schemas.py
backend/app/models/: collection.py  vector_record.py
backend/app/routers/: collections.py  vectors.py
backend/app/services/: collection_service.py  embedding_service.py  vector_service.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: CollectionForm.tsx  CollectionList.tsx  DeleteConfirmDialog.tsx  TextEmbeddingForm.tsx
frontend/src/pages/: CollectionManager.tsx  VectorManager.tsx
frontend/src/services/: api.ts  vectorApi.ts
frontend/src/types/: collection.ts  vector.ts
pgvector_cli/: __init__.py  __main__.py  config.py  database.py  exceptions.py  logging_config.py  main.py  platform.py  result.py
pgvector_cli/models/: __init__.py  collection.py  vector_record.py
pgvector_cli/services/: __init__.py  chunking_service.py  cleanup_service.py  collection_service.py  document_service.py  embedding_service.py  llm_service.py  vector_service.py
pgvector_cli/services/parsers/: __init__.py  base_parser.py  csv_parser.py  pdf_parser.py  (+1 more)
pgvector_cli/utils/: __init__.py  formatters.py  validators.py
test_documents/: create_excel_test.py  test_companies.xlsx  test_data.csv  test_document.txt  test_markdown.md
tests/: conftest.py
tests/integration/: test_cli_commands.py
tests/unit/: test_collection_service.py  test_embedding_service.py  test_validators.py
